fix category overflow due to excess border

--- a/css/app.css
+++ b/css/app.css
@@ -105,7 +105,8 @@ a {
     cursor: pointer;
     position: relative;
     margin-right: 10px;
-    border: 5px solid white;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
 }
 .drawer .drawer-item.active {
     border: 5px solid #673AB7;
